[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
structopt = "0.3.26"
failure = "0.1.8"
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
log = "0.4.17"
env_logger = "0.9.3"
sled = "0.34.7"

[dev-dependencies]
assert_cmd = "0.11.0"
criterion = "0.4.0"
predicates = "1.0.0"
rand = "0.8.5"
tempfile = "3.3.0"
walkdir = "2.3.2"
